[project]
name = "policyserver"
version = "0.0.1"
authors = [
  { name="Shever Natsai", email="shevernts@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SheverNts/policyserver"
"Bug Tracker" = "https://github.com/SheverNts/policyserver/issues"